--- a/nerds.html
+++ b/nerds.html
@@ -28,7 +28,13 @@
         <div class="col mb-3">
             <div class="card">
 
-                                <img class="d-block mx-auto mb-4" src="img_256/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
+                                <img
+                    class="d-block mx-auto mb-4 pop"
+                    src="img_256/yoshi.jpeg"
+                    width="256"
+                    data-name="Yoshi mit Ei"
+                    alt="Yoshi mit Ei"
+                />
                 
                 <div class="card-body">
                     <h5 class="card-title">Yoshi mit Ei</h5>
@@ -42,13 +48,31 @@
                 <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                            <img class="d-block mx-auto mb-4" src="img_256/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze - Bild 1"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/pilze.jpeg"
+                                width="256"
+                                data-name="PowerUp und LevelUp Pilze"
+                                alt="PowerUp und LevelUp Pilze - Bild 1"
+                            />
                         </div>
                                                 <div class="carousel-item">
-                            <img class="d-block mx-auto mb-4" src="img_256/pilze2.jpeg" width="256" alt="PowerUp und LevelUp Pilze - Bild 2"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/pilze2.jpeg"
+                                width="256"
+                                data-name="PowerUp und LevelUp Pilze"
+                                alt="PowerUp und LevelUp Pilze - Bild 2"
+                            />
                         </div>
                                                 <div class="carousel-item">
-                            <img class="d-block mx-auto mb-4" src="img_256/pilze3.jpeg" width="256" alt="PowerUp und LevelUp Pilze - Bild 3"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/pilze3.jpeg"
+                                width="256"
+                                data-name="PowerUp und LevelUp Pilze"
+                                alt="PowerUp und LevelUp Pilze - Bild 3"
+                            />
                         </div>
                                             </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
@@ -74,13 +98,31 @@
                 <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                            <img class="d-block mx-auto mb-4" src="img_256/stern.jpeg" width="256" alt="Stern - Bild 1"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/stern.jpeg"
+                                width="256"
+                                data-name="Stern"
+                                alt="Stern - Bild 1"
+                            />
                         </div>
                                                 <div class="carousel-item">
-                            <img class="d-block mx-auto mb-4" src="img_256/stern2.jpeg" width="256" alt="Stern - Bild 2"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/stern2.jpeg"
+                                width="256"
+                                data-name="Stern"
+                                alt="Stern - Bild 2"
+                            />
                         </div>
                                                 <div class="carousel-item">
-                            <img class="d-block mx-auto mb-4" src="img_256/stern3.jpeg" width="256" alt="Stern - Bild 3"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/stern3.jpeg"
+                                width="256"
+                                data-name="Stern"
+                                alt="Stern - Bild 3"
+                            />
                         </div>
                                             </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
@@ -102,7 +144,13 @@
         <div class="col mb-3">
             <div class="card">
 
-                                <img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
+                                <img
+                    class="d-block mx-auto mb-4 pop"
+                    src="img_256/tentakel.jpeg"
+                    width="256"
+                    data-name="Purpur & Grün Tentakel"
+                    alt="Purpur & Grün Tentakel"
+                />
                 
                 <div class="card-body">
                     <h5 class="card-title">Purpur &amp; Gr&uuml;n Tentakel</h5>
@@ -116,6 +164,54 @@
     </div>
 </div>
 
+
+<div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="row mb-4">
+                    <div class="col-9">
+                        <h2 id="image-title"></h2>
+                    </div>
+                    <div class="col-3 text-end">
+                        <button class="btn btn-secondary btn-lg active" onclick="closeModal()">X</button>
+                    </div>
+                </div>
+
+                <img src="" id="image-preview" style="width: 100%;" alt="Vergrößertes Bild">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal-backdrop fade show" id="backdrop" style="display: none;"></div>
+
+<script type="application/javascript">
+function openModal() {
+    document.getElementById("backdrop").style.display = "block"
+    document.getElementById("imagemodal").style.display = "block"
+    document.getElementById("imagemodal").classList.add("show")
+}
+function closeModal() {
+    document.getElementById("backdrop").style.display = "none"
+    document.getElementById("imagemodal").style.display = "none"
+    document.getElementById("imagemodal").classList.remove("show")
+}
+
+var modal = document.getElementById('imagemodal');
+window.onclick = function(event) {
+    if (event.target === modal) {
+        closeModal()
+    }
+};
+
+Array.prototype.forEach.call(document.getElementsByClassName('pop'), function(el, i){
+    el.addEventListener('click', function() {
+        document.getElementById('image-preview').setAttribute('src', this.getAttribute('src').replace('img_256/', 'img/'));
+        document.getElementById('image-title').innerText = this.dataset.name;
+        openModal();
+    });
+});
+</script>
     <div class="container">
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
