--- a/pflanzen.html
+++ b/pflanzen.html
@@ -32,10 +32,22 @@
                 <div id="carousel0" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                            <img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen - Bild 1"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/kakteen.jpeg"
+                                width="256"
+                                data-name="Kakteen"
+                                alt="Kakteen - Bild 1"
+                            />
                         </div>
                                                 <div class="carousel-item">
-                            <img class="d-block mx-auto mb-4" src="img_256/kakteen2.jpeg" width="256" alt="Kakteen - Bild 2"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/kakteen2.jpeg"
+                                width="256"
+                                data-name="Kakteen"
+                                alt="Kakteen - Bild 2"
+                            />
                         </div>
                                             </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel0" data-bs-slide="prev">
@@ -61,10 +73,22 @@
                 <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                            <img class="d-block mx-auto mb-4" src="img_256/blume.jpeg" width="256" alt="Blume - Bild 1"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/blume.jpeg"
+                                width="256"
+                                data-name="Blume"
+                                alt="Blume - Bild 1"
+                            />
                         </div>
                                                 <div class="carousel-item">
-                            <img class="d-block mx-auto mb-4" src="img_256/blume2.jpeg" width="256" alt="Blume - Bild 2"/>
+                            <img
+                                class="d-block mx-auto mb-4 pop"
+                                src="img_256/blume2.jpeg"
+                                width="256"
+                                data-name="Blume"
+                                alt="Blume - Bild 2"
+                            />
                         </div>
                                             </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
@@ -90,6 +114,54 @@
     </div>
 </div>
 
+
+<div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="row mb-4">
+                    <div class="col-9">
+                        <h2 id="image-title"></h2>
+                    </div>
+                    <div class="col-3 text-end">
+                        <button class="btn btn-secondary btn-lg active" onclick="closeModal()">X</button>
+                    </div>
+                </div>
+
+                <img src="" id="image-preview" style="width: 100%;" alt="Vergrößertes Bild">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal-backdrop fade show" id="backdrop" style="display: none;"></div>
+
+<script type="application/javascript">
+function openModal() {
+    document.getElementById("backdrop").style.display = "block"
+    document.getElementById("imagemodal").style.display = "block"
+    document.getElementById("imagemodal").classList.add("show")
+}
+function closeModal() {
+    document.getElementById("backdrop").style.display = "none"
+    document.getElementById("imagemodal").style.display = "none"
+    document.getElementById("imagemodal").classList.remove("show")
+}
+
+var modal = document.getElementById('imagemodal');
+window.onclick = function(event) {
+    if (event.target === modal) {
+        closeModal()
+    }
+};
+
+Array.prototype.forEach.call(document.getElementsByClassName('pop'), function(el, i){
+    el.addEventListener('click', function() {
+        document.getElementById('image-preview').setAttribute('src', this.getAttribute('src').replace('img_256/', 'img/'));
+        document.getElementById('image-title').innerText = this.dataset.name;
+        openModal();
+    });
+});
+</script>
     <div class="container">
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
